# doorcam

./: .gitignore  Containerfile  README.md  doorcam  entrypoint.sh
.calibration/: undistort.py
etc/: qrscan.yml  rec.yml
lib/python/motion/: __init__.py  motion.py
lib/python/turbojpeg/: __init__.py  compress.py  decompress.py
lib/python/v4l2mjpg/: __init__.py  v4l2mjpg.py
plugins/: azaza.py.example  qrscan.py  raw.py  rec.py  scale.py
share/: undistort.yml
src/doorcam/: jpeg2umat.cpp  jpeg2umat.hpp  meson.build  motion.c  qrscan.cpp  qrtest.cpp  v4l2mjpg.c
src/doorcam/include/: DynamsoftBarcodeReader.h  DynamsoftCommon.h
